<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="82sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_login_title"
        app:layout_constraintStart_toStartOf="@id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />


    <EditText
        android:id="@+id/et_email"
        style="@style/et_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_login_hint" />

    <EditText
        android:id="@+id/et_password"
        style="@style/et_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_email" />


    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_your_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_main"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"/>


    <TextView
        android:id="@+id/tv_do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_account"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_create"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:minHeight="1dp"
        android:minWidth="1dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tv_do_not_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_do_not_have_account"
        app:layout_constraintBottom_toBottomOf="@id/tv_do_not_have_account"
        android:text="@string/create"/>


</androidx.constraintlayout.widget.ConstraintLayout>